# stringutil

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: get_middle.rs  lib.rs
